Deposit product list, create, update API
