# app/models/auth/branch.rb
@@ -6,4 +6,5 @@ class Auth::Branch < ApplicationRecord
   has_many :users, class_name: "Auth::User", foreign_key: "branch_id"
   has_many :customers, class_name: "Kyc::Customer", foreign_key: "branch_id"
   has_many :deposit_products, class_name: "Deposit:DepositProduct", foreign_key: "branch_id"
+  has_many :deposit_accounts, class_name: "Deposit::DepositAccount", foreign_key: "branch_id"
 end
