# swagger/v1/swagger.yaml
@@ -196,9 +196,10 @@ paths:
                     items:
                       type: string
                       example: "First name can't be blank"
+      security:
+        - bearerAuth: []
 
-
-  /api/v1/deposit/products:
+  /api/v1/deposit/new_product:
     post:
       summary: Create Deposit Product
       tags:
@@ -285,9 +286,11 @@ paths:
                     items:
                       type: string
                       example: "Product name can't be blank"
+      security:
+        - bearerAuth: []
 
-  /api/v1/deposit/products/{id}:
-    put:
+  /api/v1/deposit/update_product/{id}:
+    patch:
       summary: Update Deposit Product
       tags:
         - deposit
@@ -382,3 +385,271 @@ paths:
                     items:
                       type: string
                       example: "Minimum balance must be greater than or equal to 0"
+      security:
+        - bearerAuth: []
+
+  /api/v1/deposit/update_account/{id}:
+    patch:
+      summary: Update Deposit Account
+      tags:
+        - deposit
+      operationId: updateDepositAccount
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: ID of the deposit account to be updated
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                deposit_account:
+                  type: object
+                  properties:
+                    branch_id:
+                      type: integer
+                    account_opening_date:
+                      type: string
+                      format: date
+                    customer_id:
+                      type: integer
+                    deposit_product_id:
+                      type: integer
+                    account_id:
+                      type: integer
+                    account_number:
+                      type: string
+                    introducer_id:
+                      type: integer
+                    interest_rate:
+                      type: number
+                    account_duration:
+                      type: integer
+                    interest_frequency_id:
+                      type: integer
+                    interest_nominee_id:
+                      type: integer
+                    account_nominee_id:
+                      type: integer
+                    status:
+                      type: boolean
+                    terminated_on:
+                      type: string
+                      format: date
+                    minimum_balance:
+                      type: number
+                    installment_amount:
+                      type: number
+                    installment_frequency_id:
+                      type: integer
+                    installment_account_id:
+                      type: integer
+                    joint_customers:
+                      type: string
+                    account_name:
+                      type: string
+                    display_address:
+                      type: string
+      responses:
+        '200':
+          description: Account Updated Successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: Account Updated Successfully
+                  data:
+                    type: object
+                    properties:
+                      deposit_account:
+                        type: object
+        '422':
+          description: Account Updated Failed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 422
+                  message:
+                    type: string
+                    example: Account Updated Failed
+                  data:
+                    type: array
+                    items:
+                      type: string
+                      example: "Minimum balance must be greater than or equal to 0"
+      security:
+        - bearerAuth: []
+
+
+
+  /api/v1/deposit/filter_product:
+
+    get:
+      summary: Retrieve a list of deposit products with pagination
+      tags:
+        - deposit
+      parameters:
+        - name: page
+          in: query
+          description: Page number for pagination
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            default: 1
+        - name: per_page
+          in: query
+          description: Number of items per page
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 10
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              example:
+                status: 200
+                message: Data Fetched
+                total_pages: 1
+                current_page: 1
+                total_entries: 3
+                data:
+                  - id: "2"
+                    type: "product"
+                    attributes:
+                      id: 2
+                      branch:
+                        id: 1
+                        branch_name: "Main Branch Bank"
+                        branch_code: "MBB"
+                        nickname: "MainBranch"
+                        creator_id: 1
+                        ibt_gl: 1
+                        created_at: "2023-11-30T15:46:21.181Z"
+                        updated_at: "2023-11-30T15:46:21.181Z"
+                        is_head_office: true
+                      product_name: "Saving Product"
+                      product_name_np: "Saving Product NP"
+                      product_type: "saving"
+                      prefix: "SP"
+                      suffix: null
+                      acc_digit: 5
+                      duration: 365
+                      minimum_balance: "100.0"
+                      interest_rate: "5.0"
+                      interest_posting_frequency:
+                        id: 3
+                        frequency_name: "End of Quarter"
+                        frequency_code: "EOQ"
+                        frequency_name_np: "त्रैमासिक"
+                        schedule_freq_name: "Quarterly"
+                        schedule_frequency_code: "Q"
+                      interest_calculation_type:
+                        id: 1
+                        type_name: "Interest on Daily Balance"
+                        frequency_id: 1
+                        status: true
+                      tran_gl_id: 1
+                      interest_expenses_gl_id: 2
+                      interest_payable_gl_id: 3
+                      tax_gl_id: 4
+                      tax_rate: "6.0"
+                      is_active: true
+                      created_at: "2023-12-04T05:08:59.733Z"
+                      updated_at: "2023-12-04T05:08:59.733Z"
+                  - id: "4"
+                    type: "product"
+                    attributes:
+                      # ... attributes for the second product
+                  - id: "6"
+                    type: "product"
+                    attributes:
+                      # ... attributes for the third product
+      security:
+        - bearerAuth: []
+
+  /api/v1/deposit/filter_account:
+    get:
+      summary: Retrieve a list of deposit accounts with pagination
+      tags:
+        - deposit
+      parameters:
+        - name: page
+          in: query
+          description: Page number for pagination
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            default: 1
+        - name: per_page
+          in: query
+          description: Number of items per page
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 10
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              example:
+                status: 200
+                message: Data Fetched
+                total_pages: 1
+                current_page: 1
+                total_entries: 1
+                data:
+                  - id: "13"
+                    type: "account"
+                    attributes:
+                      id: 13
+                      branch_id: 1
+                      account_opening_date: "2023-11-06"
+                      customer:
+                        id: 72
+                        profile_id: 1
+                        # ... other attributes for customer
+                      deposit_product:
+                        id: 2
+                        branch_id: 1
+                        product_name: "Saving Product"
+                        # ... other attributes for deposit_product
+                      account_id: 1
+                      account_number: "01SP0013"
+                      introducer_id: 1
+                      interest_rate: "5.0"
+                      # ... other attributes for account
+                      creator:
+                        id: 1
+                        email: "dhakalsagar2000@gmail.com"
+                        # ... other attributes for creator
+                      last_update_by:
+                        id: 1
+                        email: "dhakalsagar2000@gmail.com"
+                        # ... other attributes for last_update_by
+
